tests/snapshots/examples_fixtures/type_system__failing__171_self_recursive_refinement_concrete_chain_e300.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/171_self_recursive_refinement_concrete_chain_e300.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

The value of `x` does not match its type annotation.

  --> examples/type_system/failing/171_self_recursive_refinement_concrete_chain_e300.flx:10:21
   |
10 |     let x: String = sum_down(3)
   |                     ^^^^^^^^^^^
   |                     ----------- this is `Int`
   |            ------ but `x` was annotated as `String`

Help:
  Change `x` to a `String` value or update the annotation to `Int`.
== stdout ==
<not executed>
